New CSS file has been added to the HTML file as a text. Google font added to the HTML file

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>Yair's First HTML File</title>
 
 
+
+    <link rel="stylesheet"  type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 
 
 <body>
-    <h1>Day 2 of Bootcamp!</h1>
+    <h1 class="headerText">Day 2 of Bootcamp!</h1>
         <div>
             <img src="Images/CodeImage.jpg" alt="Software code on computer screen.">
         </div>
