--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Yair's First HTML File</title>
 
-
-
-    <link rel="stylesheet"  type="text/css" href="styles.css">
+    <!-- Google fonts link-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
+    <!-- Local CSS link-->    
+    <link rel="stylesheet"  type="text/css" href="styles.css">
+    
+    <!-- Bootstrap CSS links-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 
 <body>
-    <h1 class="headerText">Day 2 of Bootcamp!</h1>
+    <h1 class="header-text">Day 2 of Bootcamp!</h1>
         <div>
             <img src="Images/CodeImage.jpg" alt="Software code on computer screen.">
         </div>
@@ -77,5 +80,10 @@
     <h2>Enjoy the following YouTube music video by QUEEN</h2>
     <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
     </iframe>
+
+    <!-- Bootstrap jQuery, Popper.js and Js links-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
